--- a/app/views/kayttaja/rekisteroidy.html
+++ b/app/views/kayttaja/rekisteroidy.html
@@ -18,7 +18,7 @@
     <form method="post" action="{{base_path}}/kayttajat/rekisteroidy/">
       <div class="form-group">
 
-        <label for="username">Käyttäjänimi:</label>
+        <label for="username">Käyttäjänimi (vähintään viisi merkkiä pitkä, kirjaimia ja numeroita):</label>
         <div class="input-group">
           <div class="input-group-addon"><i class="fa fa-user fa-fw"></i></div>
           <input type="username" class="form-control" name="kayttajanimi" id="username" value="{{syote.kayttajanimi}}" placeholder="Käyttäjänimi" required />
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="salasana">Salasana:</label>
+        <label for="salasana">Salasana (vähintään viisi merkkiä pitkä):</label>
         <div class="input-group">
           <div class="input-group-addon"><i class="fa fa-key fa-fw"></i></div>
           <input type="password" class="form-control" id="pwd" name="salasana" placeholder="Salasana" required />
