--- a/app/views/resepti/resepti.html
+++ b/app/views/resepti/resepti.html
@@ -8,7 +8,7 @@
       <a href="{{base_path}}/resepti/{{resepti.id}}/poista/"><i class="fa fa-times fa-2x redicon room" aria-hidden="true"></i> Poista resepti      </a>
       <a href="{{base_path}}/resepti/{{resepti.id}}/muokkaa/"><i class="fa fa-pencil fa-2x redicon room" aria-hidden="true"></i> Muokkaa reseptiä</a>
       {% elseif user_logged_in %}
-      <a href="#"><i class="fa fa-thumbs-o-up fa-2x room" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-star-o fa-2x room like" aria-hidden="true"></i></a>
       {% endif %}
       <h3>{{resepti.nimi}}</h3>
       {% if resepti.kayttajanimi != 'poistettu' %}
