--- a/app/views/resepti/reseptit_resepti_item.html
+++ b/app/views/resepti/reseptit_resepti_item.html
@@ -9,7 +9,7 @@
     {% if resepti.kayttajanimi and resepti.kayttajanimi != 'poistettu' %}
     <a href="#">{{resepti.kayttajanimi}}</a>
     {% endif %}
-    <a href="#"><i class="fa fa-thumbs-o-up fa-2x room right" aria-hidden="true"></i></a>
+    <a href="#"><i class="fa fa-star-o fa-2x room right" aria-hidden="true"></i></a>
     </div>
 
 </div>
