--- a/app/views/resepti/resepti.html
+++ b/app/views/resepti/resepti.html
@@ -37,11 +37,11 @@
     <div class="col-sm-5">
       <h4>Ravintoarvot</h4>
       <ul>
-        <li>Kalorit: 1000 kcal</li>
-        <li>Proteiini: 65gr</li>
-        <li>Hiilihydraatit: 45gr</li>
-        <li>Rasva: 34gr</li>
-        <li>Kuidut: 25gr</li>
+        <li>Kalorit: {{ravintoarvot.energia|round}} kcal</li>
+        <li>Proteiini: {{ravintoarvot.proteiini|round}}gr</li>
+        <li>Hiilihydraatit: {{ravintoarvot.hiilarit|round}}gr</li>
+        <li>Rasva: {{ravintoarvot.rasva|round}}gr</li>
+        <li>Kuidut: {{ravintoarvot.kuidut|round}}gr</li>
       </ul>
     </div>
   </div>
