--- a/app/views/kayttaja/kayttaja.html
+++ b/app/views/kayttaja/kayttaja.html
@@ -12,6 +12,16 @@
         {{message}}
       </div>
       {% endif %}
+      {% if errors %}
+      <div class="alert alert-danger alert-dismissable">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        <ul>
+          {% for error in errors %}
+          <li>{{error.0}}</li>
+          {% endfor %}
+        </ul>
+      </div>
+      {% endif %}
       <form action="{{base_path}}/kayttajat/edit/" method="post">
         <div class="form-group">
           <input class="form-control hidden" name="id" id="id" type="number" value="{{kayttaja.id}}" />
@@ -23,7 +33,7 @@
         <div class="form-group">
           <input class="form-control hidden" type="text" name="kayttajanimi" id="kayttajanimi" value="{{kayttaja.kayttajanimi}}" />
           <label for="kayttajanimi">Käyttäjänimi:</label>
-          <input class="form-control" type="text" name="kayttajanimi" id="kayttajanimi" value="{{kayttaja.kayttajanimi}}" disabled />
+          <input class="form-control" type="text" id="kayttajanimi" value="{{kayttaja.kayttajanimi}}" disabled />
         </div>
         <div class="form-group">
           <label for="etunimi">Etunimi:</label>
@@ -37,7 +47,14 @@
           <label for="sposti">Sähköpostiosoite:</label>
           <input class="form-control" type="email" id="sposti" name="sposti" value="{{kayttaja.sposti}}" />
         </div>
-
+        <div class="form-group">
+          <label for="salasana">Salasana (vähintään viisi merkkiä pitkä):</label>
+            <input type="password" class="form-control" id="pwd" name="salasana" value="{{kayttaja.salasana}}" required />
+        </div>
+        <div class="form-group">
+          <label for="salasana_toisto">Toista salasana:</label>
+            <input type="password" class="form-control" id="pwd" name="salasana_toisto" value="{{kayttaja.salasana}}" required />
+        </div>
         <button type="submit" class="btn btn-primary room">Tallenna</button>
         <button type="reset" class="btn btn-danger room">Hylkää muutokset</button>
       </form>
