--- a/app/views/kayttaja/kayttajat.html
+++ b/app/views/kayttaja/kayttajat.html
@@ -12,6 +12,7 @@
         {{message}}
       </div>
       {% endif %}
+      
       <form method="post" action="{{base_path}}/kayttajat/">
       <table class="table table-striped table-bordered">
         <thead>
@@ -27,12 +28,12 @@
           {% for kayttaja in kayttajat %}
           {% if kayttaja.kayttajanimi and kayttaja.id != 9 %}
           <tr>
-            <td class="hidden"><input class="form-control" name="id[]" id="id" type="text" value="{{kayttaja.id}}" /></td>
+            <td class="hidden"><input class="form-control" name="id[]" id="id" type="text" value="{{kayttaja.id}}" {% if kayttaja.id == 1 %} disabled {% endif %} /></td>
             <td>{{ kayttaja.id }}</td>
-            <td class="hidden"><input class="form-control" name="kayttajanimi[]" id="kayttajanimi" type="text" value="{{kayttaja.kayttajanimi}}" /></td>
+            <td class="hidden"><input class="form-control" name="kayttajanimi[]" id="kayttajanimi" type="text" value="{{kayttaja.kayttajanimi}}" {% if kayttaja.id == 1 %} disabled {% endif %}/></td>
             <td><a href="{{base_path}}/kayttajat/{{kayttaja.id}}">{{ kayttaja.kayttajanimi }}</a></td>
             <td>
-            <select id="admin" class="form-control" name="admin[]">
+            <select id="admin" class="form-control" name="admin[]" {% if kayttaja.id == 1 %} disabled {% endif %}>
             {% if kayttaja.admin %}
             <option value="1">True</option>
             <option value="0">False</option>
@@ -43,7 +44,7 @@
             </td>
             </select>
             <td>
-              <select class="form-control" name="delete[]" id="delete">
+              <select class="form-control" name="delete[]" id="delete" {% if kayttaja.id == 1 %} disabled {% endif %}>
                 <option value="0">Älä tee mitään</option>
                 <option value="1">Poista käyttäjä</option>
               </select>
